--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ black = "^24.3.0"
 isort = "^5.13.2"
 flake8 = "^7.0.0"
 flake8-pyproject = "^1.2.3"
+mypy = "^1.9.0"
 
 [build-system]
 requires = ["poetry-core"]
