--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ fastapi = "^0.110.1"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
 pydantic-settings = "^2.2.1"
 aiosqlite = "^0.20.0"
+pyjwt = {extras = ["crypto"], version = "^2.8.0"}
+bcrypt = "^4.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
